<resources>

    <string name="app_name">Expensious</string>
    <string name="action_settings">Settings</string>
    <string name="action_categories">Categories Chart</string>
    <string name="action_subcategories">SubCategories Chart</string>
    <string name="action_accounts">Accounts Chart</string>
    <string name="action_persons">Persons Chart</string>

    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_family">Family Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_note">Note</string>
    <string name="hint_from_account">From Account</string>
    <string name="hint_to_account">To Account</string>
    <string name="hint_category">Category</string>
    <string name="hint_person">Person</string>
    <string name="hint_person_name">Person Name</string>
    <string name="hint_account_name">Account Name</string>
    <string name="hint_category_name">Category Name</string>

    <string name="btn_reset">RESET PASSWORD</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_zero_bal">0.00</string>
    <string name="btn_currency">CUR</string>
    <string name="btn_income">INCOME</string>
    <string name="btn_expense">EXPENSE</string>
    <string name="btn_loan">LOAN</string>
    <string name="btn_debt">DEBT</string>
    <string name="btn_transfer">TRANSFER</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_date">DATE</string>
    <string name="btn_time">TIME</string>
    <string name="btn_start_date">START DATE</string>
    <string name="btn_end_date">END DATE</string>

    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About Us</string>
    <string name="alert">Alert</string>
    <string name="person">Person</string>
    <string name="period">Change Period</string>
    <string name="clear">Clear Local Data</string>
    <string name="clearAll">Clear All Data</string>
    <string name="restore">Restore Local Data</string>
    <string name="category">Customize Category</string>
    <string name="currency">Change Currency</string>
    <string name="recurring">Recurring</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="start_date">Start Date : </string>
    <string name="end_date">End Date : </string>
    <string name="account">Account</string>
    <string name="amount">Amount : </string>
    <string name="total">Total : </string>
    <string name="balance">Balance : </string>
    <string name="repay">Repay/Recover : </string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category of</string>
    <string name="family_name">Family : </string>
    <string name="head">Head :</string>
    <string name="reset_pass">To reset your password, enter the email you registered with Expensious</string>

    <array  name="main_categories_expense">
        <item name="0">SELECT</item>
        <item name="1">FOOD</item>
        <item name="2">ENTERTAINMENT</item>
        <item name="3">TRAVEL FARE</item>
        <item name="4">HEALTH</item>
        <item name="5">BEAUTY</item>
        <item name="6">CLOTHING</item>
        <item name="7">BILLS</item>
        <item name="8">STATIONARY</item>
        <item name="9">EDUCATIONAL</item>
        <item name="10">TAX PAYMENT</item>
    </array>

    <array name="sub_categories_expense">
        <item name="1.1">VEGETABLES</item>
        <item name="1.2">FRUITS</item>
        <item name="2.1">MOVIES</item>
        <item name="2.2">TELEVISION</item>
        <item name="3.1">AUTO FARE</item>
        <item name="3.2">BUS FARE</item>
        <item name="3.3">TRAIN FARE</item>
        <item name="3.4">FLIGHT FARE</item>
        <item name="3.5">TAXI FARE</item>
        <item name="4.1">SURGERY</item>
        <item name="4.2">MEDICINES</item>
        <item name="5.1">MANICURE</item>
        <item name="5.2">PEDICURE</item>
        <item name="5.3">HAIR DRESSING</item>
        <item name="6.1">SHIRTS</item>
        <item name="6.2">PANTS</item>
        <item name="6.3">T-SHIRTS</item>
        <item name="6.4">SHOES</item>
        <item name="6.5">SANDALS</item>
        <item name="6.6">SWEATER</item>
        <item name="6.7">SKIRTS</item>
        <item name="6.8">JACKET</item>
        <item name="7.1">PHONE BILL</item>
        <item name="7.2">ELECTRICITY BILL</item>
        <item name="7.3">WATER BILL</item>
        <item name="8.1">COPY</item>
        <item name="8.2">PEN</item>
        <item name="8.3">PENCIL</item>
        <item name="9.1">SCHOOL FEES</item>
        <item name="9.2">TUITION FEES</item>
        <item name="9.3">ADMISSION FEES</item>
        <item name="10.1">INCOME TAX</item>
        <item name="10.2">SALES TAX</item>
        <item name="10.3">PROPERTY TAX</item>
    </array>

    <array name="main_category_income">
        <item name="1">SALARY</item>
        <item name="2">WAGES</item>
        <item name="3">PROVIDENT FUND</item>
        <item name="4">MED_CLAIM</item>
        <item name="5">PENSION</item>
        <item name="6">CAPITAL GAINS</item>
        <item name="7">HOUSE PROPERTY</item>
    </array>

    <array name="sub_categories_income">
        <item name="2.1">DAILY</item>
        <item name="2.2">WEEKLY</item>
    </array>

    <array name="recursive">
        <item name="0">YEARLY</item>
        <item name="1">MONTHLY</item>
        <item name="2">WEEKLY</item>
        <item name="3">DAILY</item>
    </array>

    <array name="period">
        <item name="0">YEARLY</item>
        <item name="1">MONTHLY</item>
        <item name="2">DAILY</item>
        <item name="3">CUSTOM</item>
    </array>

    <array name="report_type">
        <item name="0">CATEGORY</item>
        <item name="1">ACCOUNTS</item>
        <item name="2">PERSONS</item>
        <item name="3">SUBCATEGORY</item>
    </array>

    <string name="cb_remember">Remember Me</string>
    <string name="cb_include_total">Include in total</string>
    <string name="cb_include_report">Include in report</string>

    <string name="font_icon_email">{fa-envelope}</string>
    <string name="font_icon_username">{fa-user}</string>
    <string name="font_icon_password">{fa-user-secret}</string>
    <string name="font_icon_date">{fa-calendar}</string>
    <string name="font_icon_time">{fa-clock-o}</string>
    <string name="font_icon_alert">{fa-bell}</string>
    <string name="font_icon_recurring">{fa-refresh}</string>
    <string name="font_icon_account">{fa-credit-card}</string>
    <string name="font_icon_category">{fa-list}</string>
    <string name="font_icon_person">{fa-male}</string>
    <string name="font_icon_note">{fa-file-text}</string>
    <string name="font_icon_clear">{fa-trash}</string>
    <string name="font_icon_restore">{fa-reply}</string>
    <string name="font_icon_currency">{fa-money}</string>
    <string name="font_icon_check">{fa-check}</string>

</resources>
