<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PieChartActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_period"
        android:title="@string/period"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cat_pie"
        android:title="@string/action_categories"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_acc_pie"
        android:title="@string/action_accounts"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_person_pie"
        android:title="@string/action_persons"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
