<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_recursive_btn">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_zero_bal"
            android:onClick="onAmountClick"
            android:padding="35dp"
            android:gravity="end"
            android:textSize="40sp"
            android:id="@+id/add_recursive_btn_amt"
            style="@style/ButtonStyle.RaisedFull" />

    </com.balysv.materialripple.MaterialRippleLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_recursive_ll_type"
        android:layout_below="@id/add_recursive_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <IconTextView
                        style="@style/IconTextViewStyle.Black"
                        android:layout_gravity="center"
                        android:text="@string/font_icon_date"/>

                    <Button
                        style="@style/ButtonStyle.Transparent"
                        android:text="@string/btn_start_date"
                        android:onClick="onStartDateClick"
                        android:stateListAnimator="@android:animator/fade_in"
                        android:id="@+id/add_recursive_btn_start_date"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <IconTextView
                        style="@style/IconTextViewStyle.Black"
                        android:layout_gravity="center"
                        android:text="@string/font_icon_date"/>

                    <Button
                        style="@style/ButtonStyle.Transparent"
                        android:text="@string/btn_end_date"
                        android:onClick="onEndDateClick"
                        android:id="@+id/add_recursive_btn_end_date"
                        android:stateListAnimator="@android:animator/fade_in"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/font_icon_time"/>

                <Button
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="match_parent"
                    android:text="@string/btn_time"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:onClick="onTimeClick"
                    android:stateListAnimator="@android:animator/fade_in"
                    android:id="@+id/add_recursive_btn_time"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_recursive_ll_from_account">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_account"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:hint="@string/hint_from_account"
                    android:clickable="true"
                    android:id="@+id/add_recursive_from_account"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/add_recursive_ll_to_account">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_account"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:hint="@string/hint_to_account"
                    android:id="@+id/add_recursive_to_account"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_recursive_ll_category">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_category"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:hint="@string/hint_category"
                    android:clickable="true"
                    android:id="@+id/add_recursive_category"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_recursive_ll_person">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:paddingRight="8dp"
                    android:text="@string/font_icon_person"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:hint="@string/hint_person"
                    android:clickable="true"
                    android:id="@+id/add_recursive_person"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_note"/>

                <EditText
                    style="@style/EditTextAppearance.Editable"
                    android:hint="@string/hint_note"
                    android:id="@+id/add_recursive_note"
                    android:gravity="left" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_recurring"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recurring"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="22sp"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/recursive"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:id="@+id/spinner_recursive" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_alert"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert"
                    android:paddingTop="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="9"
                    android:textSize="22sp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:id="@+id/switch_alert" />

            </LinearLayout>

            <CheckBox
                style="@style/CheckBoxStyle"
                android:text="@string/cb_include_report"
                android:id="@+id/add_recursive_cb"
                android:checked="true"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/add_recursive_ll_type"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:showDividers="middle">

        <Button
            style="@style/ButtonStyle.Transparent"
            android:layout_weight="1"
            android:text="@string/btn_expense"
            android:onClick="onExpenseClick"
            android:stateListAnimator="@android:animator/fade_in"
            android:id="@+id/add_recursive_btn_expense"/>

        <Button
            style="@style/ButtonStyle.Transparent"
            android:text="@string/btn_income"
            android:onClick="onIncomeClick"
            android:id="@+id/add_recursive_btn_income"
            android:stateListAnimator="@android:animator/fade_in"
            android:layout_weight="1"/>

        <Button
            style="@style/ButtonStyle.Transparent"
            android:text="@string/btn_transfer"
            android:onClick="onTransferClick"
            android:id="@+id/add_recursive_btn_transfer"
            android:stateListAnimator="@android:animator/fade_in"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>