<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_loan_debt_btn">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_zero_bal"
            android:onClick="onAmountClick"
            android:padding="35dp"
            android:gravity="end"
            android:textSize="40sp"
            android:id="@+id/add_loan_debt_amt"
            style="@style/ButtonStyle.RaisedFull" />

    </com.balysv.materialripple.MaterialRippleLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_loan_debt_ll_type"
        android:layout_below="@id/add_loan_debt_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <IconTextView
                        style="@style/IconTextViewStyle.Black"
                        android:layout_gravity="center"
                        android:text="@string/font_icon_date"/>

                    <Button
                        style="@style/ButtonStyle.Transparent"
                        android:text="@string/btn_date"
                        android:onClick="onDateClick"
                        android:layout_marginLeft="15dp"
                        android:stateListAnimator="@android:animator/fade_in"
                        android:id="@+id/add_loan_debt_btn_date"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <IconTextView
                        style="@style/IconTextViewStyle.Black"
                        android:layout_gravity="center"
                        android:text="@string/font_icon_time"/>

                    <Button
                        style="@style/ButtonStyle.Transparent"
                        android:text="@string/btn_time"
                        android:onClick="onTimeClick"
                        android:id="@+id/add_loan_debt_btn_time"
                        android:stateListAnimator="@android:animator/fade_in"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_loan_debt_ll_from_account">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_account"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:hint="@string/hint_from_account"
                    android:id="@+id/add_loan_debt_from_account"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/add_loan_debt_ll_to_account">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_account"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:hint="@string/hint_to_account"
                    android:id="@+id/add_loan_debt_to_account"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:paddingRight="8dp"
                    android:text="@string/font_icon_person"/>

                <EditText
                    style="@style/EditTextAppearance.Editable.Unedit"
                    android:layout_weight="1"
                    android:hint="@string/hint_person"
                    android:clickable="true"
                    android:id="@+id/add_loan_debt_person"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <IconTextView
                    style="@style/IconTextViewStyle.Black"
                    android:text="@string/font_icon_note"/>

                <EditText
                    style="@style/EditTextAppearance.Editable"
                    android:hint="@string/hint_note"
                    android:id="@+id/add_loan_debt_note"
                    android:gravity="left" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/add_loan_debt_ll_type"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:showDividers="middle">

        <Button
            style="@style/ButtonStyle.Transparent"
            android:layout_weight="1"
            android:text="@string/btn_loan"
            android:onClick="onLoanClick"
            android:stateListAnimator="@android:animator/fade_in"
            android:id="@+id/add_loan_debt_btn_loan"/>

        <Button
            style="@style/ButtonStyle.Transparent"
            android:text="@string/btn_debt"
            android:onClick="onDebtClick"
            android:id="@+id/add_loan_debt_btn_debt"
            android:stateListAnimator="@android:animator/fade_in"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>